página pesquisa.html

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   </header>
 
   <!-- Page Content -->
+
+  <!-- Carousel -->
   <div class="container">
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -85,7 +87,7 @@
         <div class="carousel-item active" style="background-image: url('img/slide-1.jpg')">
           <div class="carousel-caption d-md-block caption-estilo">
             <h3>Serviços para seu Lar</h3>
-            <a href="#" class="btn btn-success">Buscar profissionais</a>
+            <a href="pesquisa.html" class="btn btn-success">Buscar profissionais</a>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
