--- a/pesquisa.html
+++ b/pesquisa.html
@@ -29,35 +29,31 @@
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="O que você precisa?" aria-label="search">
-            <button class="btn btn-outline-success my-2-sm-0">Buscar</button>
-          </form> -->
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Serviços
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">Alvenária</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">Elétrica</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">Hidráulica</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Jardinagem</a>
-              <a class="dropdown-item" href="portfolio-item.html">Limpeza</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">Criar conta</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Entrar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Sobre</a>
-          </li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Serviços
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                <a class="dropdown-item" href="portfolio-1-col.html">Alvenária</a>
+                <a class="dropdown-item" href="portfolio-2-col.html">Elétrica</a>
+                <a class="dropdown-item" href="portfolio-3-col.html">Hidráulica</a>
+                <a class="dropdown-item" href="portfolio-4-col.html">Jardinagem</a>
+                <a class="dropdown-item" href="portfolio-item.html">Limpeza</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Criar conta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Entrar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Sobre</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -78,6 +74,7 @@
         <li class="breadcrumb-item active">Portfolio 4</li>
       </ol> -->
 
+    <!-- Formulário de pesquisa -->
     <form>
       <div class="form-row form-group">
         <div class="col-lg-4">
@@ -89,11 +86,13 @@
             <option value="1">Jequié</option>
           </select>
         </div>
-        <button class="btn btn-success col-sm-4 col-md-2">Buscar</button>
+        <button class="btn btn-success col-sm-4 col-md-2 ">Buscar</button>
 
       </div>
-
     </form>
+    <!-- fim formulário de pesquisa-->
+
+    <!-- Resultados da pesquisa -->
 
     <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
@@ -101,9 +100,9 @@
           <a href="#">
             <img class="card-img-top" src="http://placehold.it/700x400" alt="">
           </a>
-          <div class="card-body">
+          <div class="card-body ">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt?
               Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
@@ -117,7 +116,8 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="#" class="text-success">Project One</a>
+
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.
@@ -132,7 +132,8 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              <a href="#" class="text-success">Project One</a>
+
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio
               velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
@@ -146,7 +147,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.
@@ -161,7 +162,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.
@@ -176,7 +177,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Six</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident,
               perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
@@ -190,7 +191,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Seven</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.
@@ -205,7 +206,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Eight</a>
+              <a href="#" class="text-success">Project One</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius adipisci dicta dignissimos neque animi ea, veritatis,
               provident hic consequatur ut esse! Commodi ea consequatur accusantium, beatae qui deserunt tenetur ipsa.</p>
