--- a/contas.html
+++ b/contas.html
@@ -15,6 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/contas.css">
 
 </head>
 
@@ -127,7 +128,7 @@
         <div class="modal-header">
 
           <h5 class="modal-title" id="janelaLabel">
-            Entrar
+            Acesse sua conta
           </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -149,13 +150,13 @@
               <label for="senha">
                 <h6>Senha</h6>
               </label>
-              <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite seu senha" required maxlength="8">
+              <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
             </div>
           </div>
         </div>
 
         <div class="modal-footer">
-          <button type="submit" class="btn btn-success">Salvar</button>
+          <button type="submit" class="btn btn-success">Entrar</button>
           <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
         </div>
 
