--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="modal-header">
 
               <h5 class="modal-title" id="janelaLabel">
-                Entrar
+                Acesse sua conta
               </h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -349,13 +349,13 @@
             
                 <div class="form-group col-md-12">
                   <label for="senha"><h6>Senha</h6></label>
-                  <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite seu senha" required maxlength="8">
+                  <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
                 </div>
               </div>
             </div>
 
             <div class="modal-footer">
-              <button type="submit" class="btn btn-success">Salvar</button>
+              <button type="submit" class="btn btn-success">Entrar</button>
               <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
             </div>
 
