--- a/pesquisa.html
+++ b/pesquisa.html
@@ -44,10 +44,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Criar conta</a>
+              <a class="nav-link" href="contas.html">Criar conta</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Entrar</a>
+              <a href="#" class="nav-link" data-toggle="modal" data-target="#modal_login">Entrar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Sobre</a>
@@ -265,7 +265,7 @@
         <div class="modal-header">
 
           <h5 class="modal-title" id="janelaLabel">
-            Entrar
+            Acesse sua conta
           </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -287,13 +287,13 @@
               <label for="senha">
                 <h6>Senha</h6>
               </label>
-              <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite seu senha" required maxlength="8">
+              <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
             </div>
           </div>
         </div>
 
         <div class="modal-footer">
-          <button type="submit" class="btn btn-success">Salvar</button>
+          <button type="submit" class="btn btn-success">Entrar</button>
           <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
         </div>
 
