ajustes, inicio do formulario de cadastro

--- a/contas.html
+++ b/contas.html
@@ -78,7 +78,7 @@
             <li>Torne-se visível na internet. </li>
             <!-- <li>loremipsum</li> -->
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-success">Assinar</button>
+          <button id="assinar" onclick="abreLink()" type="button" class="btn btn-lg btn-block btn-success">Assinar</button>
         </div>
       </div>
 
@@ -165,6 +165,17 @@
   </form>
   <!-- /.modal -->
 
+  <script>
+    /* vou mudar essa porra, é sério kkk*/
+    function abreLink(){
+      window.location.href = 'contact.html';
+    }
+
+    function abreLink2(){
+      window.location.href = 'contact.html';
+    }
+
+   </script>
 
 </body>
 
