página cadastro freelancer, algumas correções

--- a/contact.html
+++ b/contact.html
@@ -67,50 +67,63 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Crie sua conta 
+    <h1 class="mt-4 mb-3">Crie sua conta
     </h1>
 
     <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
     <div class="row ">
-      <div class="col-md-4 mb-4">
+      <div class="col-md-8 mb-4">
         <h3>Seus clientes estão esperando!</h3>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Full Name:</label>
-              <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
+              <label>Nome:</label>
+              <input type="text" class="form-control" id="nome" placeholder="Nome" required>
               <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Phone Number:</label>
-              <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
+              <label>Sobrenome:</label>
+              <input type="text" class="form-control" id="sobrenome" placeholder="Sobrenome">
+              <p class="help-block"></p>
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
-              <label>Email Address:</label>
-              <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
+              <label>Celular:</label>
+              <input type="tel" class="form-control" id="celular" placeholder="Importante para seus clientes" required>
+            </div>
+          </div>
+          <div class="control-group form-group">
+            <div class="controls">
+              <label>CPF:</label>
+              <input type="text" class="form-control" id="CPF" required placeholder="CPF">
+            </div>
+          </div>          
+          <div class="control-group form-group">
+            <div class="controls">
+              <label>CNPJ:</label>
+              <input type="text" class="form-control" id="cnpj" required placeholder="CNPJ">
             </div>
           </div>
           <div class="control-group form-group">
             <div class="controls">
               <label>Message:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message"
+              <textarea rows="10" cols="100" class="form-control" id="message" required
                 maxlength="999" style="resize:none"></textarea>
             </div>
           </div>
           <div id="success"></div>
           <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
+          <button type="submit" class="btn btn-success" id="sendMessageButton">Próximo</button>
         </form>
       </div>
 
-      <div class="col-md-8 d-none d-md-block">
+      <!-- <div class="col-md-8 d-none d-md-block">
         <img class="img-fluid height-auto " src="img/slide-2.jpg" alt="">
-      </div>
+      </div> -->
 
     </div>
     <!-- /.row -->
