--- a/contas.html
+++ b/contas.html
@@ -168,7 +168,7 @@
   <script>
     /* vou mudar essa porra, é sério kkk*/
     function abreLink(){
-      window.location.href = 'contact.html';
+      window.location.href = 'cadastro.html';
     }
 
     function abreLink2(){
