--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="row servicos-icones">
 
       <div class="col-lg-4 wow bounceIn">
-        <h2>Alvenária</h2>
+        <h2>Alvenaria</h2>
         <img class="rounded-circle icone" src="img/icons/alvenaria.png" alt="Generic placeholder image" width="140" height="140">
       </div>
       <!-- /.col-lg-4 -->
