--- a/cadastro.html
+++ b/cadastro.html
@@ -53,7 +53,7 @@
                             <a href="#" class="nav-link" data-toggle="modal" data-target="#modal_login">Entrar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Sobre</a>
+                            <a class="nav-link" href="painelFreelancer.html">Painel</a>
                         </li>
                     </ul>
                 </div>
