--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <!-- /.row -->
 
     <!-- Features Section -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-6">
         <h2>Modern Business Features</h2>
         <p>The Modern Business template by Start Bootstrap includes:</p>
@@ -292,13 +292,13 @@
       <div class="col-lg-6">
         <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
       </div>
-    </div>
+    </div> -->
     <!-- /.row -->
 
     <hr>
 
     <!-- Call to Action Section -->
-    <div class="row mb-4">
+    <!-- <div class="row mb-4">
       <div class="col-md-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae
           veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
@@ -308,7 +308,7 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
   <!-- /.container -->
 
   <!-- Footer -->
