--- a/pesquisa.html
+++ b/pesquisa.html
@@ -36,7 +36,7 @@
                 Serviços
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">Alvenária</a>
+                <a class="dropdown-item" href="alvenaria.html">Alvenaria</a>
                 <a class="dropdown-item" href="portfolio-2-col.html">Elétrica</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Hidráulica</a>
                 <a class="dropdown-item" href="portfolio-4-col.html">Jardinagem</a>
